--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,8 +2,8 @@
 galaxy_info:
   author: Antti Koskinen
   description: Installs a JMeter with Standard Plugin
-  company: Digile Oy
-  license: GPLv2
+  company: DIGILE Ltd.
+  license: MIT
   min_ansible_version: 1.2
 
 dependencies: []
